--- a/descarga.html
+++ b/descarga.html
@@ -35,7 +35,7 @@
       <img src="img/personaje- player.jpg" alt="Windows" class="icono" />
       <h2>Versión para Windows</h2>
       <p>Explora mundos en tu PC con gráficos pixelados y música 8-bit.</p>
-      <a href="downloads/Pollo Congelado.zip" class="pixel-button">Descargar EXE</a>
+      <a href="https://drive.google.com/drive/my-drive?hl=es" class="pixel-button">Descargar EXE</a>
     </div>
     
 
@@ -49,3 +49,4 @@
   <script src="descarga.js"></script>
 </body>
 </html>
+
