--- a/sala-arcade.html
+++ b/sala-arcade.html
@@ -43,7 +43,7 @@
           <li>🎵 Banda: Kevin MacLeod - Pixelland NO COPYRIGHT 8-bit Music</li>
           <li>📦 Tamaño: 69,158KB</li>
         </ul>
-        <a href="https://drive.google.com/drive/my-drive?hl=es" class="pixel-button">⬇️ Descargar Demo</a>
+        <a href="https://drive.google.com/file/d/1YPN2KyZqb7IhjexFozjfnQDs_2VGzNDm/view?usp=drive_link" class="pixel-button">⬇️ Descargar Demo</a>
       </div>
     </div>
 
@@ -59,4 +59,5 @@
   <script src="sala-arcade.js"></script>
 </body>
 </html>
+
 
