--- a/descarga.html
+++ b/descarga.html
@@ -35,7 +35,7 @@
       <img src="img/personaje- player.jpg" alt="Windows" class="icono" />
       <h2>Versión para Windows</h2>
       <p>Explora mundos en tu PC con gráficos pixelados y música 8-bit.</p>
-      <a href="https://drive.google.com/file/d/1YPN2KyZqb7IhjexFozjfnQDs_2VGzNDm/view?usp=drive_link" class="pixel-button">Descargar EXE</a>
+      <a href="https://drive.google.com/file/d/1YPN2KyZqb7IhjexFozjfnQDs_2VGzNDm/view?usp=sharing" class="pixel-button">Descargar EXE</a>
     </div>
     
 
@@ -49,5 +49,6 @@
   <script src="descarga.js"></script>
 </body>
 </html>
+
 
 
